<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_document"
        android:title="@string/notes_title" />
    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/ic_files"
        android:title="@string/files_title" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title" />
    <item
        android:id="@+id/navigation_archived"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_and_trash_title" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_short" />
</menu>
